# pyOPALTools

./: .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yml  CHANGELOG  CHANGELOG.md  Gantry2.ipynb  LICENSE  README.md  cyclotron.py  dataset.ipynb  opal-overview.ipynb  phspPlots.py  pyproject.toml  requirements.txt  setup.py  statPlots.py  utils.py
amr/: AmrOpal.py  __init__.py
amrPlots/: bunch_and_grids.py  compare.py  part_boxes.py  particles.py  tools.py  visualize.py
db/: __init__.py  mldb.py
doc/: Makefile  add_new_files_to_doc.sh  make.bat
jobhandler/: __init__.py  submit.py
opal/: #__init__.py#  __init__.py  config.py  opal.py  setup.py
opal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
optPilot/: Annotate.py  Interpolator.py  OptPilotJsonReader.py  README.mkd  __init__.py  genMlDb.py  visualize.py  visualize_parallel_coords.py  visualize_pf.py
pc/: __init__.py  pce.py
profiling/: LoadBalancing.py  Memory.py  __init__.py
pyH5root/: Canvas.py  FieldParser.py  FieldPlotter.py  PH5MainFrame.py  Plotter.py  SDDSParser.py  SDDSPlotter.py  StatFileParser.py  StatPlotter.py  __init__.py  h5root.py
statistics/: __init__.py  plots.py
surrogate/: __init__.py  bootstrap.py  chaospy_model.py  confidence_interval.ipynb  uq.py  uq_example.ipynb  uqtk_model.py
test/: StatWrapper.ipynb
tests/: smoke_notebooks.py  testCycl-1.py  testCycl-2.py  testMemory-1.py  testParallelPlot.ipynb  testPs-1.py  testPs-2.py  testStat-1.py  testStat-2.py  testTiming-1.py  testTiming-2.py
timing/: Extractor.py  TimePlot.py  Timing.py  __init__.py  (+1 more)
(+783 files in other folders)
