[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opal"
version = "1.0.0"
description = "Tools for OPAL simulation data analysis and visualization"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name = "pyOPALTools contributors" }
]

license = { text = "GPL-3.0-or-later" }

dependencies = [
  "chaospy>=3.2.9",
  "h5py>=2.9.0",
  "matplotlib>=3.0.3",
  "numpy>=1.16.2",
  "pandas>=0.24.2",
  "plotly>=3.7.0",
  "scipy>=1.2.1",
  "seaborn>=0.9.0",
  "scikit-learn",
  "yt>=3.5.1"
]

[project.optional-dependencies]
test = [
  "pytest",
  "nbformat",
  "nbconvert",
  "nbclient",
  "jupyter-client"
]

docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "nbsphinx",
  "nbconvert",
  "ipykernel",
  "plotly"
]

[project.urls]
Homepage = "https://github.com/OPALX-project/pyOPALTools.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]